adding movies by id route with unit test and api specs
